# Owl

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  README.md  appveyor.yml  conanfile.py  conanfile.txt  travis.yml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_report.md  Question.md
CMake/: conan.cmake
console/: CMakeLists.txt  CommandHistory.cpp  CommandHistory.h  Core.h  OwlConsole.cpp  OwlConsole.h  README.md  Terminal.h  TerminalUnix.cpp  TerminalWindows.cpp  main.cpp
doc/: build-osx.md  build-win.md
docs/: REFERENCE.md
installers/windows/: build.cmd
src/: AboutDlg.cpp  AboutDlg.h  AboutDlg.ui  BoardIconTree.cpp  BoardIconTree.h  BoardIconView.cpp  BoardIconView.h  BoardTreeView.cpp  BoardTreeView.h  BoardUpdateWorker.cpp  BoardUpdateWorker.h  BoardsModel.cpp  BoardsModel.h  CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  ConfiguringBoardDlg.cpp  ConfiguringBoardDlg.h  ContentView.cpp  ContentView.h  Core.h  DefaultStyle.h  EditBoardDlg.cpp  EditBoardDlg.h  ErrorReportDlg.cpp  ErrorReportDlg.h  ErrorReportDlg.ui  FocusEventLineEdit.cpp  FocusEventLineEdit.h  ForumView.cpp  ForumView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewThreadDlg.cpp  NewThreadDlg.h  OwlApplication.cpp  OwlApplication.h  PaginationWidget.cpp  PaginationWidget.h  (+14 more)
src/CMake/: FindCurl.cmake  FindHTMLTidy.cmake  FindHunspell.cmake  FindLog4Qt.cmake  FindLua.cmake
src/CPack/: Info.plist.in  Owl.CPackConfig.cmake.in  Owl.cpack  OwlConsole.CPackConfig.cmake.in  OwlConsole.cpack  OwlPackage.cmake.in  OwlVersion.cmake  OwlVersion.cmake.in
src/Console/: CMakeLists.txt  ColorOutput.h  ColorScope.cpp  ColorScope.h  CommandHistory.cpp  Core.h  CursesApp.cpp  CursesApp.h  OwlConsole.cpp  OwlConsole.h  README.md  Terminal.h  TerminalUnix.cpp  TerminalWindows.cpp  main.cpp
src/Console/Curses/: CMakeLists.txt  ColorScope.cpp  ColorScope.h  Textbox.cpp  Textbox.h
src/Data/: Board.cpp  Board.h  BoardManager.cpp  BoardManager.h  BoardManagerSQL.h  CMakeLists.txt  ConnectionListModel.cpp  ConnectionListModel.h  ForumTreeModel.cpp  ForumTreeModel.h
src/Owl/: AboutDlg.cpp  AboutDlg.h  AboutDlg.ui  AspectRatioPixmapLabel.cpp  BoardIconView.cpp  BoardIconView.h  BoardTreeView.cpp  BoardTreeView.h  BoardUpdateWorker.h  BoardsModel.cpp  BoardsModel.h  CMakeLists.txt  ChatConnectionFrame.cpp  ChatConnectionFrame.h  ClickableLabel.cpp  ConfiguringBoardDlg.cpp  ConfiguringBoardDlg.h  ConfiguringBoardDlg.ui  ConnectionFrame.h  ContentView.cpp  ContentView.h  Core.h  EditBoardDlg.cpp  EditBoardDlg.h  EditBoardDlg.ui  ErrorReportDlg.cpp  ErrorReportDlg.h  ErrorReportDlg.ui  FocusEventLineEdit.cpp  FocusEventLineEdit.h  ForumConnectionFrame.cpp  ForumConnectionFrame.h  ForumView.cpp  ForumView.h  GUIConstants.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewConnection.cpp  NewConnection.h  (+24 more)
src/Owl/Controls/: AspectRatioPixmapLabel.h  CMakeLists.txt  ClickableLabel.h
src/Owl/Data/: Board.cpp  Board.h  BoardManager.cpp  BoardManager.h
src/Owl/Dialogs/: AboutDlg.cpp  CMakeLists.txt  ConfiguringBoardDlg.cpp  NewThreadDlg.ui  PreferencesDlg.cpp  QuickAddDlg.h
src/Owl/config/Windows/: owl.ini  owl.json
src/Owl/config/macOS/: settings.json
src/Owl/res/: Owl.qrc  style-default.xml
src/Owl/res/html/: boardItem.html  emptyPostList.html  postPageHeader.html  postPagePostBit.html
src/Owl/res/images/: splash-big.pdn
src/Owl/res/js/: nCodeImageResizer.js
src/Owl/res/qml/: ChatWindow.qml  DialogOverlay.qml  NewChatConnection.qml  NewConnectionDlg.qml  NewMessageBoardConnection.qml  NewRedditConnection.qml  NewThreadDialog.qml  postList.qml  threadList.qml
src/OwlConsole/: CMakeLists.txt  ColorOutput.h  Core.h  OwlConsole.h  README.md  Terminal.h  main.cpp  terminalosx.h
src/OwlConsole/libs/: rang.hpp
src/OwlTests/: CMakeLists.txt  OwlUtilsTests.cpp  OwlUtilsTests.h  ParserTests.cpp  ParserTests.h  bbcodeparsertests.h  main.cpp
src/Parsers/: BBCodeParser.cpp  BBCodeParser.h  Board.cpp  Board.h  CMakeLists.txt  Forum.cpp  Forum.h  LuaParserBase.cpp  LuaParserBase.h  OwlLua.cpp  OwlLua.h  ParserBase.cpp  ParserBase.h  ParserManager.cpp  ParserManager.h  Tapatalk.cpp  Tapatalk.h  Xenforo.cpp  Xenforo.h  Xenforo2.cpp  Xenforo2.h  xrvariant.cpp
src/Resources/: Owl.icns
src/Tests/: ParsersTest_Tapatalk.cpp  UtilsTest_Moment.cpp
src/Utils/: Base64.cpp  Base64.h  CMakeLists.txt  DateTimeParser.cpp  DateTimeParser.h  Exception.cpp  Exception.h  Moment.cpp  Moment.h  OwlLiterals.h  OwlLogger.cpp  OwlLogger.h  OwlUtils.cpp  OwlUtils.h  QSgml.cpp  QSgml.h  QSgmlTag.cpp  QSgmlTag.h  QThreadEx.h  Rijndael.cpp  Rijndael.h  Settings.cpp  Settings.h  SimpleArgs.cpp  SimpleArgs.h  StringMap.cpp  StringMap.h  Version.cpp  Version.h  WebClient.cpp  WebClient.h  xrbase64.cpp  xrbase64.h  xrvariant.h
src/res/: Owl.qrc  Owl.rc
src/res/qml/: boardIconList.qml  postList.qml  threadList.qml
src/res/sql/: owl.sql
tests/: CMakeLists.txt  OwlTest_Board.cpp  OwlTest_BoardData.cpp  OwlTest_BoardManager.cpp  OwlUtilsTests.cpp  OwlUtilsTests.h  ParsersTest_BBCodeParser.cpp  ParsersTest_Forum.cpp  ParsersTest_ParserManager.cpp  ParsersTest_Tapatalk.cpp  ParsersTest_XenForo.cpp  SampleTests.cpp  SampleTests.h  UtilsTest_DateTimeParser.cpp  UtilsTest_Moment.cpp  UtilsTest_OwlUtils.cpp  UtilsTest_QSgml.cpp  UtilsTest_StringMap.cpp  UtilsTest_Version.cpp  UtilsTest_WebClient.cpp  bbcodeparsertests.cpp  main.cpp
